--- a/index.html
+++ b/index.html
@@ -8,99 +8,110 @@
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
-
-  Get Started
-
-  Access your files, anywhere
-
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
-
-  Security you can trust
-
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
-
-  Real-time collaboration
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
-
-  Store any type of file
-
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+  <main>
+    <section class="header">
+      <div class="logo">
+        <img src="./images/logo.svg" alt="">
+        <nav>
+          Features
+          Team
+          Sign In
+        </nav>
+      </div>
+      <div class="hero">
+        All your files in one secure location, accessible anywhere.
+        Fylo stores all your most important files in one secure location. Access them wherever
+        you need, share and collaborate with friends family, and co-workers.
+        Get Started
+      </div>
+    </section>
+    <section class="feature">
+      <div class="feature-item">
+        Access your files, anywhere
+        The ability to use a smartphone, tablet, or computer to access your account means your
+        files follow you everywhere.
+      </div>
+      <div class="feature-item">
+        Security you can trust
+        2-factor authentication and user-controlled encryption are just a couple of the security
+        features we allow to help secure your files.
+      </div>
+      <div class="feature-item">
+        Real-time collaboration
+        Securely share files and folders with friends, family and colleagues for live collaboration.
+        No email attachments required.
+      </div>
+      <div class="feature-item">
+        Store any type of file
+        Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+        file types to be securely stored and shared.
+      </div>
+    </section>
+    <section class="testimonialOne">
+      <div class="testimonialOne-textContainer">
+        Stay productive, wherever you are
+        Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+        storage needs.
+        Securely share files and folders with friends, family and colleagues for live collaboration. No email
+        attachments required.
+        See how Fylo works
+      </div>
+    </section>
+    <section class="testimonialTwo">
+      <div class="testimaonialTwo-item">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+        become a well-oiled collaboration machine.
+        Satish Patel
+        Founder & CEO, Huddle
+      </div>
+      <div class="testimaonialTwo-item">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+        become a well-oiled collaboration machine.
+        Bruce McKenzie
+        Founder & CEO, Huddle
+      </div>
+      <div class="testimaonialTwo-item">
+        Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+        become a well-oiled collaboration machine.
+        Iva Boyd
+        Founder & CEO, Huddle
+      </div>
+    </section>
+    <section class="cta">
+      <div class="cta-container">
+        <div class="cta-description">
+          Get early access today
+          It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+          questions, our support team would be happy to help you.
+        </div>
+        <div class="cta-signup">Get Started For Free</div>
+      </div>
+    </section>
+  </main>
 
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <div class="footer">
+      <div class="footer-address">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua
+        +1-543-123-4567
+        example@fylo.com
+      </div>
+      <div class="footer-links">
+        About Us
+        Jobs
+        Press
+        Blog
+        Contact Us
+        Terms
+        Privacy
+      </div>
+      <div class="footer-social"></div>
+    </div>
   </footer>
+
 </body>
 </html>
