--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./dist/css/style.css">
   <script src="https://kit.fontawesome.com/5a38f1c712.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!-- Main Starts here -->
-  <main>
+  <main class="wrapper">
     <!-- Header section -->
     <header class="header">
       <div class="header__container">
@@ -165,7 +165,7 @@
     </section>
   </main>
   <!-- Footer Starts here -->
-  <footer class="footer">
+  <footer class="wrapper footer">
     <div class="footer__container">
       <img src="./images/logo.svg" alt="Fylo Logo" class="footer__logo">
 
