--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
     </header>
     <!-- Hero section -->
     <section class="hero">
-      <img src="./images/illustration-intro.png" alt="" class="hero__image" aria-hidden="true">
-      <h1 class="hero__title">All your files in one secure location, accessible anywhere.</h1>
-      <p class="hero__text">
-        Fylo stores all your most important files in one secure location. Access them wherever
-        you need, share and collaborate with friends, family, and co-workers.
-      </p>
-      <button class="button button--hero" type="button">Get Started</button>
+      <div class="hero__container">
+        <img src="./images/illustration-intro.png" alt="" class="hero__image" aria-hidden="true">
+        <div class="hero__content">
+          <h1 class="hero__title">All your files in one secure location, accessible anywhere.</h1>
+          <p class="hero__text">
+            Fylo stores all your most important files in one secure location. Access them wherever
+            you need, share and collaborate with friends, family, and co-workers.
+          </p>
+          <button class="button button--hero" type="button">Get Started</button>
+        </div>
+      </div>
     </section>
     <!-- Features section -->
     <section class="features" id="features">
