--- a/index.html
+++ b/index.html
@@ -48,37 +48,55 @@
     </section>
     <!-- Features section -->
     <section class="features" id="features">
-      <div class="features__item">
-        <img src="./images/icon-access-anywhere.svg" class="features__icon" aria-hidden="true">
-        <h3 class="features__title">Access your files, anywhere</h3>
-        <p class="features__description">
-          The ability to use a smartphone, tablet, or computer to access your account means your
-          files follow you everywhere.
-        </p>
-      </div>
-      <div class="features__item">
-        <img src="./images/icon-security.svg" class="features__icon" aria-hidden="true">
-        <h3 class="features__title">Security you can trust</h3>
-        <p class="features__description">
-          2-factor authentication and user-controlled encryption are just a couple of the security
-          features we allow to help secure your files.
-        </p>
-      </div>
-      <div class="features__item">
-        <img src="./images/icon-collaboration.svg" class="features__icon" aria-hidden="true">
-        <h3 class="features__title">Real-time collaboration</h3>
-        <p class="features__description">
-          Securely share files and folders with friends, family and colleagues for live collaboration.
-          No email attachments required.
-        </p>
-      </div>
-      <div class="features__item">
-        <img src="./images/icon-any-file.svg" class="features__icon" aria-hidden="true">
-        <h3 class="features__title">Store any type of file</h3>
-        <p class="features__description">
-          Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
-          file types to be securely stored and shared.
-        </p>
+      <div class="features__grid">
+        <div class="features__item">
+          <div class="features__icon-container">
+            <img src="./images/icon-access-anywhere.svg" class="features__icon" aria-hidden="true">
+          </div>
+          <div class="features__text">
+            <h3 class="features__title">Access your files, anywhere</h3>
+            <p class="features__description">
+              The ability to use a smartphone, tablet, or computer to access your account means your
+              files follow you everywhere.
+            </p>
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__icon-container">
+            <img src="./images/icon-security.svg" class="features__icon" aria-hidden="true">
+          </div>
+          <div class="features__text">
+            <h3 class="features__title">Security you can trust</h3>
+            <p class="features__description">
+              2-factor authentication and user-controlled encryption are just a couple of the security
+              features we allow to help secure your files.
+            </p>
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__icon-container">
+            <img src="./images/icon-collaboration.svg" class="features__icon" aria-hidden="true">
+          </div>
+          <div class="features__text">
+            <h3 class="features__title">Real-time collaboration</h3>
+            <p class="features__description">
+              Securely share files and folders with friends, family and colleagues for live collaboration.
+              No email attachments required.
+            </p>
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__icon-container">
+            <img src="./images/icon-any-file.svg" class="features__icon" aria-hidden="true">
+          </div>
+          <div class="features__text">
+            <h3 class="features__title">Store any type of file</h3>
+            <p class="features__description">
+              Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+              file types to be securely stored and shared.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Productive Section -->
