--- a/index.html
+++ b/index.html
@@ -116,8 +116,28 @@
             attachments required.
           </p>
           <a href="#" class="productive__link">
-            See how Fylo works
-            <img src="./images/icon-arrow.svg" alt="" aria-hidden="true">
+            <div class="productive__link-content">
+              See how Fylo works
+              <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs>
+                  <circle id="b" cx="6" cy="6" r="6" />
+                  <filter x="-25%" y="-25%" width="150%" height="150%" filterUnits="objectBoundingBox" id="a">
+                    <feOffset in="SourceAlpha" result="shadowOffsetOuter1" />
+                    <feGaussianBlur stdDeviation="1" in="shadowOffsetOuter1" result="shadowBlurOuter1" />
+                    <feColorMatrix
+                      values="0 0 0 0 0.384313725 0 0 0 0 0.878431373 0 0 0 0 0.850980392 0 0 0 0.811141304 0"
+                      in="shadowBlurOuter1" />
+                  </filter>
+                </defs>
+                <g fill="none" fill-rule="evenodd">
+                  <g transform="translate(2 2)">
+                    <use fill="#000" filter="url(#a)" xlink:href="#b" />
+                    <use fill="#62E0D9" xlink:href="#b" />
+                  </g>
+                  <path d="M8.582 6l-.363.35 1.452 1.4H5.333v.5h4.338L8.22 9.65l.363.35 2.074-2z" fill="#1B2330" />
+                </g>
+              </svg>
+            </div>
           </a>
         </div>
       </div>
@@ -125,48 +145,54 @@
     <!-- Testimonials Section -->
     <section class="testimonials">
       <div class="testimonials__grid">
-        <article class="testimonial">
-          <p class="testimonial__quote">
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-            become
-            a well-oiled collaboration machine.
-          </p>
-          <footer class="testimonial__author">
-            <img src="./images/profile-1.jpg" alt="Satish Patel" class="testimonial__avatar">
-            <div class="testimonial__meta">
-              <strong class="testimonial__name">Satish Patel</strong>
-              <span class="testimonial__title">Founder & CEO, Huddle</span>
-            </div>
-          </footer>
-        </article>
-        <article class="testimonial">
-          <p class="testimonial__quote">
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-            become
-            a well-oiled collaboration machine.
-          </p>
-          <footer class="testimonial__author">
-            <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="testimonial__avatar">
-            <div class="testimonial__meta">
-              <strong class="testimonial__name">Bruce McKenzie</strong>
-              <span class="testimonial__title">Founder & CEO, Huddle</span>
-            </div>
-          </footer>
-        </article>
-        <article class="testimonial">
-          <p class="testimonial__quote">
-            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-            become
-            a well-oiled collaboration machine.
-          </p>
-          <footer class="testimonial__author">
-            <img src="./images/profile-3.jpg" alt="Iva Boyd" class="  testimonial__avatar">
-            <div class="testimonial__meta">
-              <strong class="testimonial__name">Iva Boyd</strong>
-              <span class="testimonial__title">Founder & CEO, Huddle</span>
-            </div>
-          </footer>
-        </article>
+        <div class="testimonials__card">
+          <article class="testimonial">
+            <p class="testimonial__quote">
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+              become
+              a well-oiled collaboration machine.
+            </p>
+            <footer class="testimonial__author">
+              <img src="./images/profile-1.jpg" alt="Satish Patel" class="testimonial__avatar">
+              <div class="testimonial__meta">
+                <strong class="testimonial__name">Satish Patel</strong>
+                <span class="testimonial__title">Founder & CEO, Huddle</span>
+              </div>
+            </footer>
+          </article>
+        </div>
+        <div class="testimonials__card">
+          <article class="testimonial">
+            <p class="testimonial__quote">
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+              become
+              a well-oiled collaboration machine.
+            </p>
+            <footer class="testimonial__author">
+              <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="testimonial__avatar">
+              <div class="testimonial__meta">
+                <strong class="testimonial__name">Bruce McKenzie</strong>
+                <span class="testimonial__title">Founder & CEO, Huddle</span>
+              </div>
+            </footer>
+          </article>
+        </div>
+        <div class="testimonials__card">
+          <article class="testimonial">
+            <p class="testimonial__quote">
+              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+              become
+              a well-oiled collaboration machine.
+            </p>
+            <footer class="testimonial__author">
+              <img src="./images/profile-3.jpg" alt="Iva Boyd" class="  testimonial__avatar">
+              <div class="testimonial__meta">
+                <strong class="testimonial__name">Iva Boyd</strong>
+                <span class="testimonial__title">Founder & CEO, Huddle</span>
+              </div>
+            </footer>
+          </article>
+        </div>
       </div>
     </section>
     <!-- CTA Section -->
