--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
     <section class="cta">
       <div class="cta__content">
         <h2 class="cta__title">Get early access today</h2>
-        <p class="cta__text">It only takes a minute to sign up...</p>
+        <p class="cta__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you
+          have any questions, our support team would be happy to help you</p>
 
         <form class="cta__form" action="#">
           <div class="cta__group">
