Footer mobile device styling

--- a/index.html
+++ b/index.html
@@ -214,25 +214,31 @@
     </section>
   </main>
   <!-- Footer Starts here -->
-  <footer class="wrapper footer">
+  <footer class=" footer">
     <div class="footer__container">
       <img src="./images/logo.svg" alt="Fylo Logo" class="footer__logo">
 
       <div class="footer__content">
-
         <div class="footer__contact-info">
           <div class="footer__item footer__item--address">
-            <img src="./images/icon-location.svg" alt="" aria-hidden="true">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <div class="footer__icon-container">
+              <img src="./images/icon-location.svg" alt="" aria-hidden="true" class="footer__icon">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua</p>
           </div>
 
           <div class="footer__item footer__item--phone">
-            <img src="./images/icon-phone.svg" alt="" aria-hidden="true">
+            <div class="footer__icon-container">
+              <img src="./images/icon-phone.svg" alt="" aria-hidden="true" class="footer__icon">
+            </div>
             <p>+1-543-123-4567</p>
           </div>
 
           <div class="footer__item footer__item--email">
-            <img src="./images/icon-email.svg" alt="" aria-hidden="true">
+            <div class="footer__icon-container">
+              <img src="./images/icon-email.svg" alt="" aria-hidden="true" class="footer__icon">
+            </div>
             <p>example@fylo.com</p>
           </div>
         </div>
@@ -262,7 +268,6 @@
             <i class="fa-brands fa-instagram" aria-hidden="true"></i>
           </a>
         </div>
-
       </div>
     </div>
   </footer>
