testimonial and cta styling

--- a/index.html
+++ b/index.html
@@ -147,72 +147,75 @@
     </section>
     <!-- Testimonials Section -->
     <section class="testimonials">
-      <div class="testimonials__grid">
-        <div class="testimonials__card">
-          <article class="testimonial">
-            <p class="testimonial__quote">
-              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-              become
-              a well-oiled collaboration machine.
-            </p>
-            <footer class="testimonial__author">
-              <img src="./images/profile-1.jpg" alt="Satish Patel" class="testimonial__avatar">
-              <div class="testimonial__meta">
-                <strong class="testimonial__name">Satish Patel</strong>
-                <span class="testimonial__title">Founder & CEO, Huddle</span>
-              </div>
-            </footer>
-          </article>
-        </div>
-        <div class="testimonials__card">
-          <article class="testimonial">
-            <p class="testimonial__quote">
-              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-              become
-              a well-oiled collaboration machine.
-            </p>
-            <footer class="testimonial__author">
-              <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="testimonial__avatar">
-              <div class="testimonial__meta">
-                <strong class="testimonial__name">Bruce McKenzie</strong>
-                <span class="testimonial__title">Founder & CEO, Huddle</span>
-              </div>
-            </footer>
-          </article>
-        </div>
-        <div class="testimonials__card">
-          <article class="testimonial">
-            <p class="testimonial__quote">
-              Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-              become
-              a well-oiled collaboration machine.
-            </p>
-            <footer class="testimonial__author">
-              <img src="./images/profile-3.jpg" alt="Iva Boyd" class="  testimonial__avatar">
-              <div class="testimonial__meta">
-                <strong class="testimonial__name">Iva Boyd</strong>
-                <span class="testimonial__title">Founder & CEO, Huddle</span>
-              </div>
-            </footer>
-          </article>
+      <div class="wrapper testimonials__container">
+        <div class="testimonials__grid">
+          <div class="testimonials__card">
+            <article class="testimonial">
+              <p class="testimonial__quote">
+                Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become
+                a well-oiled collaboration machine.
+              </p>
+              <footer class="testimonial__author">
+                <img src="./images/profile-1.jpg" alt="Satish Patel" class="testimonial__avatar">
+                <div class="testimonial__meta">
+                  <strong class="testimonial__name">Satish Patel</strong>
+                  <span class="testimonial__title">Founder & CEO, Huddle</span>
+                </div>
+              </footer>
+            </article>
+          </div>
+          <div class="testimonials__card">
+            <article class="testimonial">
+              <p class="testimonial__quote">
+                Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become
+                a well-oiled collaboration machine.
+              </p>
+              <footer class="testimonial__author">
+                <img src="./images/profile-2.jpg" alt="Bruce McKenzie" class="testimonial__avatar">
+                <div class="testimonial__meta">
+                  <strong class="testimonial__name">Bruce McKenzie</strong>
+                  <span class="testimonial__title">Founder & CEO, Huddle</span>
+                </div>
+              </footer>
+            </article>
+          </div>
+          <div class="testimonials__card">
+            <article class="testimonial">
+              <p class="testimonial__quote">
+                Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+                become
+                a well-oiled collaboration machine.
+              </p>
+              <footer class="testimonial__author">
+                <img src="./images/profile-3.jpg" alt="Iva Boyd" class="  testimonial__avatar">
+                <div class="testimonial__meta">
+                  <strong class="testimonial__name">Iva Boyd</strong>
+                  <span class="testimonial__title">Founder & CEO, Huddle</span>
+                </div>
+              </footer>
+            </article>
+          </div>
         </div>
       </div>
     </section>
     <!-- CTA Section -->
     <section class="cta">
-      <div class="cta__content">
-        <h2 class="cta__title">Get early access today</h2>
-        <p class="cta__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you
-          have any questions, our support team would be happy to help you</p>
-
-        <form class="cta__form" action="#">
-          <div class="cta__group">
-            <label for="email-input" class="sr-only">Email Address</label>
-            <input type="email" id="email-input" class="cta__input" placeholder="email@example.com" required>
-            <p class="cta__error-msg js-warning" aria-live="polite"></p>
-          </div>
-          <button type="submit" class="button button--cta">Get Started For Free</button>
-        </form>
+      <div class="wrapper cta__container">
+        <div class="cta__content">
+          <h2 class="cta__title">Get early access today</h2>
+          <p class="cta__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you
+            have any questions, our support team would be happy to help you</p>
+          <form class="cta__form" action="#">
+            <div class="cta__group">
+              <label for="email-input" class="sr-only">Email Address</label>
+              <input type="email" id="email-input" class="cta__input" placeholder="email@example.com" required>
+              <p class="cta__error-msg js-warning" aria-live="polite"></p>
+            </div>
+            <button type="submit" class="button button--cta">Get Started For Free</button>
+          </form>
+        </div>
       </div>
     </section>
   </main>
